--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 {% set project = "Home" %}
 {% block body %}
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Colin Weis, Orlando Carcamo, Jaden Nguyen, Ethan Zhao: Flask Portfolio</strong></h1>
-        <h4 class="text-white"><strong> This is the start of our group project! </strong></h2>
+        <h1 class="text-white"><strong>Jaden Nguyen's Flask Portfolio</strong></h1>
     </div>
     <h4 class="text-white"><strong> </strong></h2>
 {% endblock %}
