--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% set project = "Home" %}
 {% block body %}
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Jaden Nguyen's Flask Portfolio</strong></h1>
+        <h1 class="text-white"><strong>Jaden Nguyen's Flask Portfolio fdsa</strong></h1>
     </div>
     <h4 class="text-white"><strong> </strong></h2>
 {% endblock %}
