--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,5 @@
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-white"><strong>Jaden Nguyen's Flask Portfolio</strong></h1>
     </div>
-    <h4 class="text-white"><strong> </strong></h2>
+    <h4 class="text-white"><strong>Welcome to Jaden Nguyen's flask website!</strong></h2>
 {% endblock %}
