--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,8 +8,8 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Test</strong></h1>
-        <p class="text-secondary">Jaden Nguyen</p>
+        <h1 class="text-primary"><strong>About Me</strong></h1>
+        <p class="text-secondary">Hello! My name is Jaden Nguyen</p>
     </div>
 {% endblock %}
 
