--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>About Me</strong></h1>
-        <p class="text-secondary">Hello! My name is Jaden Nguyen</p>
+        <p class="text-secondary">Hello! My name is Jaden Nguyen. Welcome to my flask website.</p>
     </div>
 {% endblock %}
 
