--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,7 @@
         <h1 class="text-white"><strong>Jaden Nguyen's Flask Portfolio</strong></h1>
     </div>
     <h4 class="text-white"><strong>Welcome to Jaden Nguyen's flask website!</strong></h2>
+    </div>
+    <img src="/static/assets/wave.jpeg">
+    </div>
 {% endblock %}
