--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,11 @@
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>About Me</strong></h1>
         <p class="text-secondary">Hello! My name is Jaden Nguyen. Welcome to my flask website.</p>
-    </div>
+<img src="/static/assets/colin.jpg">
+<img src="/static/assets/ethan.jpg">
+<div class="px-5 py-5 mx-auto">    
+        <h1 class="text-primary"><strong>About Colin</strong></h1>
+        <p class="text-secondary">Above is a picture of me with a fellow outstanding table member, Colin.</p>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
