--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,14 @@
     <h4 class="text-white"><strong>Welcome to Jaden Nguyen's flask website!</strong></h2>
     </div>
     <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">`
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
+    <img src="/static/assets/wave.jpeg">
     </div>
 {% endblock %}
